Solve name-and-time-panel overflow issue using the calc() method on the chat-preview-container div

--- a/styles/chats-panel.css
+++ b/styles/chats-panel.css
@@ -6,12 +6,12 @@ p {
   display: flex;
   flex-direction: column;
   /* top: 45px;
-  left: 50px;
+  left: 50px;e4
   bottom: 0; */
   margin-left: 55px;
   margin-top: 45px;
   height: 92vh;
-  width: 380px;
+  width: 350px;
   /* flex: 1; */
   background-color: rgb(45, 45, 45);
   border-radius: 6px 0 0 0;
@@ -103,7 +103,7 @@ p {
   scrollbar-width: 12px;
   scrollbar-color: rgb(155, 155, 155);
   margin-top: 10px;
-  border: 2px solid brown;
+  /* border: 2px solid brown; */
 }
 
 .chats-main-conatiner::-webkit-scrollbar {
@@ -124,27 +124,29 @@ p {
 }
 .chat-container {
   display: flex;
-  align-items: top;
   background: transparent;
-  width: 95%;
+  width: 100%;
   padding-left: 10px;
   padding-top: 10px;
   padding-bottom: 5px;
   padding-right: 5px;
-  border: 1px solid cyan;
+  /* border: 1px solid cyan; */
   color: white;
   box-sizing: border-box;
 }
 .last-message-time {
   font-size: 13px;
   color: rgb(202, 202, 202);
-  /* width: 100%; */
-  /* flex: 1; */
-  width: 80px;
+  white-space: nowrap;
+  /* width: 80px; */
+  /* flex-shrink: 0; */
   display: flex;
   justify-content: end;
   margin-top: 10px;
-  border: 1px solid green;
+  /* border: 1px solid green; */
+  z-index: 1000;
+  /* position: absolute;
+  right: 0; */
 }
 .chat-container p {
   margin-top: 5px;
@@ -161,17 +163,21 @@ p {
   border-radius: 50%;
 }
 .chat-preview-container {
-  width: calc(100% - 55px);
+  width: calc(100% - 1000px);
+  flex: 1;
   box-sizing: border-box;
   /* flex: 1; */
   box-sizing: border-box;
+  /* border: 1px solid greenyellow; */
+  flex-direction: column;
 }
 .chat-name-and-time-container {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  max-width: 100%;
   align-items: center;
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
+  /* position: relative; */
 }
 .chat-name,
 .recent-message {
@@ -182,10 +188,12 @@ p {
 .recent-message {
   width: 90%;
   color: rgb(216, 216, 216);
-  border: 1px solid green;
+  /* border: 1px solid green; */
 }
 .chat-name {
   font-weight: bold;
-  width: 65%;
-  border: 1px solid green;
+  flex: 1;
+  /* width: 65%; */
+  margin-right: 10px;
+  /* border: 1px solid green; */
 }
